// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a critical StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow"
    role="status"
  >
    <span
      class="statusIndicator"
      data-testid="ATL-Status-Indicator-critical"
    />
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders a successful StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow"
    role="status"
  >
    <span
      class="statusIndicator"
      data-testid="ATL-Status-Indicator-success"
    />
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders a warning StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow"
    role="status"
  >
    <span
      class="statusIndicator"
      data-testid="ATL-Status-Indicator-warning"
    />
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders an end-aligned StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow labelTextEndAligned"
    role="status"
  >
    <span
      class="statusIndicator"
      data-testid="ATL-Status-Indicator-informative"
    />
    <p
      class="base regular small text end"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders an inactive StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow"
    role="status"
  >
    <span
      class="statusIndicator"
      data-testid="ATL-Status-Indicator-inactive"
    />
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;

exports[`renders an informative StatusLabel 1`] = `
<div>
  <div
    class="statusLabelRow"
    role="status"
  >
    <span
      class="statusIndicator"
      data-testid="ATL-Status-Indicator-informative"
    />
    <p
      class="base regular small text"
    >
      Foo
    </p>
  </div>
</div>
`;
